# Training-data-driven-V1-model

./: .gitignore  .gitmodules  README.md  install_a_conda_enviroment.txt  models_torch.py  multi_train_ddp.py  multi_train_torch.py  pyproject.toml  train_ddp.py
docs/: tutorial-01.md
lgn_model/: __init__.py
utils/: convert2pkl.py
utils/datasets/: __init__.py  mnist.py
